--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -35,9 +35,8 @@
         "config-react-env": "./scripts/config-react-env.js",
         "start:staging": "STAGING=true craco start",
         "start": "craco start",
-        "test:e2e": "yarn prepare-fathom && start-server-and-test start:staging http-get://127.0.0.1:3000 'cypress open'",
-        "cypress:open": "cypress open",
-        "cypress:smoke": "cypress run --spec cypress/e2e/connect-wallet.test.ts"
+        "synpress:run": "env-cmd -f .env.synpress synpress run --browser chromium --configFile synpress.config.js",
+        "test:e2e": "start-server-and-test 'yarn start:staging' http-get://127.0.0.1:3000 'yarn synpress:run'"
     },
     "dependencies": {
         "@carrot-kpi/react": "*",
@@ -73,7 +72,6 @@
         "@craco/craco": "^7.1.0",
         "@ethersproject/experimental": "^5.7.0",
         "@fontsource/ibm-plex-mono": "^5.0.3",
-        "@playwright/test": "^1.39.0",
         "@react-spring/web": "^9.7.3",
         "@rollup/plugin-commonjs": "^25.0.7",
         "@rollup/plugin-image": "^3.0.3",
@@ -92,6 +90,7 @@
         "cssnano": "^6.0.2",
         "cypress": "^12.17.4",
         "dotenv": "^16.3.1",
+        "env-cmd": "^10.1.0",
         "esbuild-loader": "^4.0.2",
         "eslint-config-custom": "*",
         "eslint-plugin-prettier": "^5.0.1",
