--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
       - main
       - develop
   pull_request:
-    types: [opened, synchronize, reopened]  
+    types: [opened, synchronize, reopened]
 jobs:
   ci:
     runs-on: ubuntu-latest
@@ -20,10 +20,10 @@ jobs:
       FATHOM_SITE_ID: ${{ secrets.FATHOM_SITE_ID }}
       FATHOM_API_KEY: ${{ secrets.FATHOM_API_KEY }}
       # synpress envs
-      SECRET_WORDS: 'battle raccoon helmet please deliver keep kiss round orphan frame update message'
-      NETWORK_NAME: 'Mumbai'
+      SECRET_WORDS: "battle raccoon helmet please deliver keep kiss round orphan frame update message"
+      NETWORK_NAME: "Mumbai"
       CHAIN_ID: 80001
-      RPC_URL: 'https://rpc.ankr.com/polygon_mumbai'
+      RPC_URL: "https://rpc.ankr.com/polygon_mumbai"
       SYMBOL: "MATIC"
       IS_TESTNET: true
     steps:
@@ -35,7 +35,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Get Yarn cache directory
         id: yarn-cache-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
+        run: echo "{dir}={$(yarn cache dir)}" >> $GITHUB_OUTPUT
       - name: Yarn cache
         uses: actions/cache@v2
         with:
