--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Get Yarn cache directory
         id: yarn-cache-path
-        run: echo "{dir}={$(yarn cache dir)}" >> $GITHUB_OUTPUT
+        run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
       - name: Yarn cache
         uses: actions/cache@v2
         with:
