--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -9,12 +9,12 @@
         "format": "eslint --fix --ext .js ./ && prettier --write './**/*.{json,md}'"
     },
     "dependencies": {
-        "@typescript-eslint/eslint-plugin": "^6.11.0",
-        "@typescript-eslint/parser": "^6.11.0",
-        "eslint": "8.53.0",
-        "eslint-config-next": "14.0.2",
-        "eslint-config-prettier": "latest",
-        "eslint-config-turbo": "1.10.16"
+        "@typescript-eslint/eslint-plugin": "^6.14.0",
+        "@typescript-eslint/parser": "^6.14.0",
+        "eslint": "8.55.0",
+        "eslint-config-next": "14.0.4",
+        "eslint-config-prettier": "9.1.0",
+        "eslint-config-turbo": "1.11.2"
     },
     "peerDependencies": {
         "eslint-plugin-prettier": "latest",
@@ -24,6 +24,6 @@
     "devDependencies": {
         "eslint-plugin-prettier": "5.0.1",
         "eslint-plugin-react": "7.33.2",
-        "prettier": "3.1.0"
+        "prettier": "3.1.1"
     }
 }
