--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,11 +6,6 @@ on:
       - develop
   pull_request:
     types: [opened, synchronize, reopened]
-env:
-  INFURA_PROJECT_ID: ${{ secrets.INFURA_PROJECT_ID }}
-  WALLETCONNECT_PROJECT_ID: ${{ secrets.WALLETCONNECT_PROJECT_ID }}
-  FATHOM_SITE_ID: ${{ secrets.FATHOM_SITE_ID }}
-  FATHOM_API_KEY: ${{ secrets.FATHOM_API_KEY }}
 jobs:
   ci:
     runs-on: ubuntu-latest
@@ -19,8 +14,18 @@ jobs:
         node-version: [18.x]
     env:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
-      TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
-      TURBO_REMOTE_ONLY: true
+      TURBO_TEAM: ${{ vars.TURBO_TEAM }}
+      INFURA_PROJECT_ID: ${{ secrets.INFURA_PROJECT_ID }}
+      WALLETCONNECT_PROJECT_ID: ${{ secrets.WALLETCONNECT_PROJECT_ID }}
+      FATHOM_SITE_ID: ${{ secrets.FATHOM_SITE_ID }}
+      FATHOM_API_KEY: ${{ secrets.FATHOM_API_KEY }}
+      # synpress envs
+      SECRET_WORDS: "battle raccoon helmet please deliver keep kiss round orphan frame update message"
+      NETWORK_NAME: "Mumbai"
+      CHAIN_ID: 80001
+      RPC_URL: "https://rpc.ankr.com/polygon_mumbai"
+      SYMBOL: "MATIC"
+      IS_TESTNET: true
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -28,14 +33,23 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "yarn"
+      - name: Get Yarn cache directory
+        id: yarn-cache-path
+        run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
+      - name: Yarn cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.yarn-cache-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ matrix.node-version }}-${{ hashFiles('**/yarn.lock') }}
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --prefer-offline --frozen-lockfile
       - name: Lint
         run: yarn lint
       - name: Test
         run: yarn test
       - name: Build
         run: yarn build
+      - name: Test e2e
+        run: yarn test:e2e
       - name: Size check
         run: yarn size-limit
