--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@commitlint/cli": "^18.4.3",
         "@commitlint/config-conventional": "^18.4.3",
         "husky": "^8.0.1",
-        "turbo": "^1.11.2"
+        "serve": "^14.2.1",
+        "turbo": "^1.10.16"
     }
 }
