--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -35,7 +35,8 @@
         "config-react-env": "./scripts/config-react-env.js",
         "start:staging": "STAGING=true craco start",
         "start": "craco start",
-        "test:e2e": "yarn prepare-fathom && yarn playwright test"
+        "synpress:run": "env-cmd -f .env.synpress synpress run --browser chrome --configFile synpress.config.js",
+        "test:e2e": "start-server-and-test 'yarn start:staging' http-get://127.0.0.1:3000 'yarn synpress:run'"
     },
     "dependencies": {
         "@carrot-kpi/react": "*",
@@ -69,8 +70,8 @@
         "@commitlint/cli": "^18.4.3",
         "@commitlint/config-conventional": "^18.4.3",
         "@craco/craco": "^7.1.0",
+        "@ethersproject/experimental": "^5.7.0",
         "@fontsource/ibm-plex-mono": "^5.0.3",
-        "@playwright/test": "^1.39.0",
         "@react-spring/web": "^9.7.3",
         "@rollup/plugin-commonjs": "^25.0.7",
         "@rollup/plugin-image": "^3.0.3",
@@ -87,7 +88,9 @@
         "buffer": "^6.0.3",
         "cross-env": "^7.0.3",
         "cssnano": "^6.0.2",
+        "cypress": "^12.17.4",
         "dotenv": "^16.3.1",
+        "env-cmd": "^10.1.0",
         "esbuild-loader": "^4.0.2",
         "eslint-config-custom": "*",
         "eslint-plugin-prettier": "^5.0.1",
@@ -105,6 +108,7 @@
         "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-typescript2": "^0.36.0",
         "size-limit": "^11.0.1",
+        "start-server-and-test": "^2.0.3",
         "tailwindcss": "^3.3.6",
         "tsconfig": "*",
         "turbo": "^1.11.2",
