--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -35,7 +35,8 @@
         "config-react-env": "./scripts/config-react-env.js",
         "start:staging": "STAGING=true craco start",
         "start": "craco start",
-        "test:e2e": "yarn prepare-fathom && yarn playwright test"
+        "synpress:run": "env-cmd -f .env.synpress synpress run --browser chrome --configFile synpress.config.js",
+        "test:e2e": "start-server-and-test 'yarn start:staging' http-get://127.0.0.1:3000 'yarn synpress:run'"
     },
     "dependencies": {
         "@carrot-kpi/react": "*",
@@ -49,10 +50,10 @@
         "ethereum-provider": "^0.7.7",
         "jwt-decode": "^4.0.0",
         "react-redux": "8.1.3",
-        "react-router-dom": "^6.18.0",
+        "react-router-dom": "^6.21.0",
         "sanitize-html": "^2.11.0",
         "use-fathom-client": "^1.3.2",
-        "viem": "^1.19.1"
+        "viem": "^1.20.0"
     },
     "peerDependencies": {
         "@carrot-kpi/shared-state": "*",
@@ -66,50 +67,53 @@
     "devDependencies": {
         "@carrot-kpi/shared-state": "*",
         "@carrot-kpi/switzer-font": "^0.1.0",
-        "@commitlint/cli": "^18.4.1",
-        "@commitlint/config-conventional": "^18.4.0",
+        "@commitlint/cli": "^18.4.3",
+        "@commitlint/config-conventional": "^18.4.3",
         "@craco/craco": "^7.1.0",
+        "@ethersproject/experimental": "^5.7.0",
         "@fontsource/ibm-plex-mono": "^5.0.3",
-        "@playwright/test": "^1.39.0",
         "@react-spring/web": "^9.7.3",
         "@rollup/plugin-commonjs": "^25.0.7",
         "@rollup/plugin-image": "^3.0.3",
         "@rollup/plugin-json": "^6.0.1",
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-replace": "^5.0.5",
-        "@size-limit/file": "^11.0.0",
-        "@types/react": "^18.2.37",
-        "@types/react-dom": "^18.2.15",
+        "@size-limit/file": "^11.0.1",
+        "@types/react": "^18.2.45",
+        "@types/react-dom": "^18.2.17",
         "@types/react-router-dom": "^5.3.3",
         "@types/rollup-plugin-peer-deps-external": "^2.2.4",
-        "@types/sanitize-html": "^2.9.4",
+        "@types/sanitize-html": "^2.9.5",
         "autoprefixer": "^10.4.16",
         "buffer": "^6.0.3",
         "cross-env": "^7.0.3",
-        "cssnano": "^6.0.1",
+        "cssnano": "^6.0.2",
+        "cypress": "^12.17.4",
         "dotenv": "^16.3.1",
+        "env-cmd": "^10.1.0",
         "esbuild-loader": "^4.0.2",
         "eslint-config-custom": "*",
         "eslint-plugin-prettier": "^5.0.1",
-        "i18next": "^23.7.6",
-        "postcss": "^8.4.31",
-        "prettier": "^3.1.0",
+        "i18next": "^23.7.11",
+        "postcss": "^8.4.32",
+        "prettier": "^3.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-i18next": "^13.4.1",
+        "react-i18next": "^13.5.0",
         "react-scripts": "^5.0.1",
-        "react-use": "^17.4.0",
+        "react-use": "^17.4.2",
         "rimraf": "^5.0.5",
-        "rollup": "^4.4.1",
+        "rollup": "^4.9.0",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-typescript2": "^0.36.0",
-        "size-limit": "^11.0.0",
-        "tailwindcss": "^3.3.5",
+        "size-limit": "^11.0.1",
+        "start-server-and-test": "^2.0.3",
+        "tailwindcss": "^3.3.6",
         "tsconfig": "*",
-        "turbo": "^1.10.16",
-        "typescript": "^5.2.2",
-        "wagmi": "^1.4.6",
+        "turbo": "^1.11.2",
+        "typescript": "^5.3.3",
+        "wagmi": "^1.4.12",
         "workbox-precaching": "^7.0.0",
         "workbox-routing": "^7.0.0"
     },
