--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
       - name: Test e2e
-        run: docker-compose -f ../../packages/frontend/docker-compose.e2e.yaml up --build synpress
+        run: docker-compose -f ./packages/frontend/docker-compose.e2e.yaml up --build synpress
         env:
           COMPOSE_DOCKER_CLI_BUILD: 1
           DOCKER_BUILDKIT: 1
