--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
       - develop
   pull_request:
     types: [opened, synchronize, reopened]
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   ci:
     runs-on: ubuntu-latest
@@ -59,7 +62,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
       - name: Test e2e
-        run: docker-compose -f ./packages/frontend/docker-compose.e2e.yaml up --build synpress
+        run: docker compose -f ./packages/frontend/docker-compose.e2e.yaml up --build -e INFURA_PROJECT_ID -e WALLETCONNECT_PROJECT_ID -e FATHOM_SITE_ID -e FATHOM_API_KEY synpress
         env:
           COMPOSE_DOCKER_CLI_BUILD: 1
           DOCKER_BUILDKIT: 1
