--- a/packages/frontend/docker-compose.e2e.yaml
+++ b/packages/frontend/docker-compose.e2e.yaml
@@ -15,10 +15,10 @@ services:
       dockerfile: ./packages/frontend/Dockerfile.e2e
       context: ../..
       args:
-        - INFURA_PROJECT_ID=$INFURA_PROJECT_ID
-        - WALLETCONNECT_PROJECT_ID=$WALLETCONNECT_PROJECT_ID
-        - FATHOM_SITE_ID=$FATHOM_SITE_ID
-        - FATHOM_API_KEY=$FATHOM_API_KEY
+        - INFURA_PROJECT_ID=${INFURA_PROJECT_ID}
+        - WALLETCONNECT_PROJECT_ID=${WALLETCONNECT_PROJECT_ID}
+        - FATHOM_SITE_ID=${FATHOM_SITE_ID}
+        - FATHOM_API_KEY=${FATHOM_API_KEY}
     environment:
       - DISPLAY=display:0.0
       - CYPRESS_DOCKER_RUN=true
