--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,9 +65,7 @@ jobs:
             ${{ runner.os }}-buildx-
       - name: Test e2e
         run: |
-          docker compose \
-            -f ./packages/frontend/docker-compose.e2e.yaml \
-            run --build synpress \
+          docker compose -f ./packages/frontend/docker-compose.e2e.yaml run synpress \
             -e INFURA_PROJECT_ID \
             -e WALLETCONNECT_PROJECT_ID \
             -e FATHOM_SITE_ID \
