chore: try new e2e tests execution approach without docker

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
       WALLETCONNECT_PROJECT_ID: ${{ secrets.WALLETCONNECT_PROJECT_ID }}
       FATHOM_SITE_ID: ${{ secrets.FATHOM_SITE_ID }}
       FATHOM_API_KEY: ${{ secrets.FATHOM_API_KEY }}
+      SLOW_MODE: true
+      DISPLAY: ':99'
+      CYPRESS_RESOURCES_WAIT: true
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -52,27 +55,27 @@ jobs:
         run: yarn test
       - name: Build
         run: yarn build
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Cache Docker layers
-        uses: actions/cache@v3
+      - name: Setup Chrome version
+        uses: browser-actions/setup-chrome@latest
         with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+          chrome-version: stable
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v3
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v3
+      # - name: Cache Docker layers
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: /tmp/.buildx-cache
+      #     key: ${{ runner.os }}-buildx-${{ github.sha }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-buildx-
       - name: Test e2e
-        run: |
-          docker compose -f ./packages/frontend/docker-compose.e2e.yaml run synpress \
-            -e INFURA_PROJECT_ID \
-            -e WALLETCONNECT_PROJECT_ID \
-            -e FATHOM_SITE_ID \
-            -e FATHOM_API_KEY
-        env:
-          COMPOSE_DOCKER_CLI_BUILD: 1
-          DOCKER_BUILDKIT: 1
-          DOCKER_DEFAULT_PLATFORM: linux/amd64
+        run: yarn test:e2e
+          # docker compose -f ./packages/frontend/docker-compose.e2e.yaml run synpress \
+          #   -e INFURA_PROJECT_ID \
+          #   -e WALLETCONNECT_PROJECT_ID \
+          #   -e FATHOM_SITE_ID \
+          #   -e FATHOM_API_KEY
       - name: Size check
         run: yarn size-limit
