--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,9 +22,6 @@ jobs:
       WALLETCONNECT_PROJECT_ID: ${{ secrets.WALLETCONNECT_PROJECT_ID }}
       FATHOM_SITE_ID: ${{ secrets.FATHOM_SITE_ID }}
       FATHOM_API_KEY: ${{ secrets.FATHOM_API_KEY }}
-      SLOW_MODE: true
-      DISPLAY: ':99'
-      CYPRESS_RESOURCES_WAIT: true
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -72,6 +69,11 @@ jobs:
       #       ${{ runner.os }}-buildx-
       - name: Test e2e
         run: yarn test:e2e
+        env:
+          CI: true
+          SLOW_MODE: true
+          DISPLAY: ':99'
+          CYPRESS_RESOURCES_WAIT: true
           # docker compose -f ./packages/frontend/docker-compose.e2e.yaml run synpress \
           #   -e INFURA_PROJECT_ID \
           #   -e WALLETCONNECT_PROJECT_ID \
