--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -1,9 +1,10 @@
 {
     "extends": "../tsconfig/frontend.json",
-    "include": ["src/**/*.ts", "cypress/**/*.ts"],
+    "include": ["src/**/*.ts"],
     "compilerOptions": {
         "lib": ["dom", "esnext", "webworker"],
-        "types": ["cypress", "node"],
-        "declaration": true
+        "types": ["node"],
+        "declaration": true,
+        "rootDir": "./src"
     }
 }
