chore: separate e2e job

--- a/turbo.json
+++ b/turbo.json
@@ -30,7 +30,7 @@
             ]
         },
         "test:e2e": {
-            "inputs": ["src/**/*.{ts,tsx}", "e2e/**/*.{ts,tsx}"],
+            "inputs": ["src/**/*.{ts,tsx}", "cypress/**/*.{ts,tsx}"],
             "dependsOn": ["^build"]
         },
         "start": {
