--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,20 +67,37 @@ jobs:
       #     key: ${{ runner.os }}-buildx-${{ github.sha }}
       #     restore-keys: |
       #       ${{ runner.os }}-buildx-
-      - name: Test e2e
-        uses: cypress-io/github-action@v6
+  e2e:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        browser: [chrome, edge, electron, firefox]
+    container:
+      image: synthetixio/docker-e2e:20.0-debian
+      options: --user 1001
+    steps:
+      - uses: actions/checkout@v4
+      - uses: cypress-io/github-action@v6
         with:
-          project: ./packages/frontend
-          command: yarn test:e2e
-        env:
-          CYPRESS_CI: true
-          CYPRESS_SLOW_MODE: true
-          CYPRESS_DISPLAY: ":99"
-          CYPRESS_RESOURCES_WAIT: true
+          working-directory: packages/frontend
+          browser: ${{ matrix.browser }}
+
+
+      # - name: Test e2e
+      #   uses: cypress-io/github-action@v6
+      #   with:
+      #     project: ./packages/frontend
+      #     command: yarn test:e2e
+      #   env:
+      #     CYPRESS_CI: true
+      #     CYPRESS_SLOW_MODE: true
+      #     CYPRESS_DISPLAY: ":99"
+      #     CYPRESS_RESOURCES_WAIT: true
           # docker compose -f ./packages/frontend/docker-compose.e2e.yaml run synpress \
           #   -e INFURA_PROJECT_ID \
           #   -e WALLETCONNECT_PROJECT_ID \
           #   -e FATHOM_SITE_ID \
           #   -e FATHOM_API_KEY
-      - name: Size check
-        run: yarn size-limit
+      # - name: Size check
+      #   run: yarn size-limit
