--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,7 +83,11 @@ jobs:
           working-directory: packages/frontend
           start: yarn start:staging
           wait-on: 'http://localhost:3000'
-
+        env:
+          INFURA_PROJECT_ID: ${{ secrets.INFURA_PROJECT_ID }}
+          WALLETCONNECT_PROJECT_ID: ${{ secrets.WALLETCONNECT_PROJECT_ID }}
+          FATHOM_SITE_ID: ${{ secrets.FATHOM_SITE_ID }}
+          FATHOM_API_KEY: ${{ secrets.FATHOM_API_KEY }}
 
       # - name: Test e2e
       #   uses: cypress-io/github-action@v6
