--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: cypress-io/github-action@v6
         with:
+          install-command: yarn --frozen-lockfile --prefer-offline
           build: yarn build:frontend-staging
           start: npx serve packages/frontend/build
           project: ./packages/frontend
