refactor: add dedicated tsconfig for build script

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -28,7 +28,7 @@
         "build": "yarn build:library",
         "build:production": "yarn clean && yarn prepare-fathom && GENERATE_SOURCEMAP=false craco build",
         "build:staging": "yarn clean && yarn prepare-fathom && GENERATE_SOURCEMAP=false STAGING=true craco build",
-        "build:library": "yarn clean && yarn prepare-fathom && rollup -c rollup.config.mjs",
+        "build:library": "yarn clean && yarn prepare-fathom && rollup -c rollup.config.mjs && tsc --project tsconfig.build.json",
         "test": "react-scripts test --env=jsdom --watchAll=false --passWithNoTests",
         "size-limit": "size-limit",
         "prepare-fathom": "prepare-fathom",
@@ -104,6 +104,7 @@
         "react-use": "^17.4.2",
         "rimraf": "^5.0.5",
         "rollup": "^4.9.0",
+        "rollup-plugin-esbuild": "^6.1.0",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-postcss": "^4.0.2",
         "rollup-plugin-typescript2": "^0.36.0",
