--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -1,10 +1,9 @@
 {
     "extends": "../tsconfig/frontend.json",
-    "include": ["src/**/*.ts"],
+    "include": ["./src/**/*", "./cypress/**/*"],
     "compilerOptions": {
         "lib": ["dom", "esnext", "webworker"],
-        "types": ["node"],
-        "declaration": true,
-        "rootDir": "./src"
+        "types": ["cypress", "node"],
+        "outDir": "./dist"
     }
 }
