--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@commitlint/config-conventional": "^18.4.3",
         "husky": "^8.0.1",
         "serve": "^14.2.1",
-        "turbo": "^1.10.16"
+        "turbo": "^1.10.16",
+        "wait-on": "^7.2.0"
     }
 }
